--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Delius&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Edu+NSW+ACT+Cursive:wght@400..700&family=Pattaya&family=Sen&family=Tangerine:wght@400;700&display=swap");
 @import "tailwindcss";
 
 @plugin "daisyui";
 
 @theme {
-  --font-custom: "Delius", cursive;
+  --font-customH1: "Dancing Script", cursive;
+  --font-custom: "Sen", sans-serif;
   --color-twilight: #c3b0a5;
   --color-clay: #ded4cb;
   --color-forest: #bad4b5;
@@ -16,4 +17,10 @@
 body {
   @apply bg-fog;
   @apply font-custom;
+}
+h1 {
+  @apply font-customH1;
+}
+h2 {
+  @apply font-customH1;
 }
